--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,12 @@ body {
     max-width: 290px;
     position: relative;
     margin: 0 auto;
+    transition-duration: transform 4s !important;
+}
+
+.card:hover {
+    cursor: pointer;
+    transform: scale(1.2) rotateZ(10deg);
 }
 
 .card-title {
@@ -43,4 +49,24 @@ img {
     transform: translate(-50%, 50%);
     top: -25px;
     left: 50%;
+}
+
+.my-modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.my-modal-content {
+    margin: 50px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
 }
